# exchange_rate_test_task

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/exchange_rate_bot/adapters/: central_bank.py
src/exchange_rate_bot/main/: bot.py  ioc.py  queue.py  scheduler.py
src/exchange_rate_bot/queue/: routers.py
src/exchange_rate_bot/telegram/: routers.py
src/exchange_rate_bot/usecases/: convert_currency.py  get_all_rates.py  update_rates.py
src/exchange_rate_bot/usecases/protocols/: cache.py  currency.py  publisher.py
