[tool.poetry]
name = "exchange-rate-bot"
version = "0.1.0"
description = ""
authors = ["Ivan Balakin <nekonekun@gmail.com>"]
readme = "README.md"
packages = [{include = "exchange_rate_bot", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.10.0"
redis = "^5.0.7"
taskiq = "^0.11.6"
taskiq-redis = "^1.0.0"
aiohttp = "^3.9.5"
dishka = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
