[tool.poetry]
name = "exchange-rate-bot"
version = "0.1.0"
description = ""
authors = ["Ivan Balakin <nekonekun@gmail.com>"]
readme = "README.md"
packages = [{include = "exchange_rate_bot", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.10.0"
redis = "^5.0.7"
taskiq = "^0.11.6"
taskiq-redis = "^1.0.0"
aiohttp = "^3.9.5"
dishka = "^1.2.0"
faststream = "^0.5.14"
taskiq-faststream = "^0.1.8"


[tool.poetry.group.dev.dependencies]
ruff = "^0.5.2"

[tool.poetry.scripts]
exchange_bot = 'exchange_rate_bot.main.bot:main'

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "single"
docstring-code-format = true

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "ANN", "FA102", "B", "RUF", "PLR", "S314", "G004"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
